fix overflow

--- a/assets/mno.css
+++ b/assets/mno.css
@@ -261,6 +261,7 @@ pre code {
   z-index: 800;
   width: 80%;
   margin-left: 20%;
+  overflow-x: hidden;
 }
 
 .content-wrapper__inner {
