--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -232,6 +232,7 @@ pre {
   z-index: 800;
   width: 80%;
   margin-left: 20%;
+  overflow-x: hidden;
 }
 
   .content-wrapper__inner {
